Add spotless formatting