@@ -27,47 +27,44 @@ import java.nio.ShortBuffer;
 /**
  * Class that wraps functionality around the Opus decoder.
  */
-public class Decoder
-{
+public class Decoder {
     protected int ssrc;
     protected char lastSeq;
     protected int lastTimestamp;
     protected PointerByReference opusDecoder;
 
-    protected Decoder(int ssrc)
-    {
+    protected Decoder(int ssrc) {
         this.ssrc = ssrc;
         this.lastSeq = (char) -1;
         this.lastTimestamp = -1;
 
         IntBuffer error = IntBuffer.allocate(1);
-        opusDecoder = Opus.INSTANCE.opus_decoder_create(OpusPacket.OPUS_SAMPLE_RATE, OpusPacket.OPUS_CHANNEL_COUNT, error);
-        if (error.get() != Opus.OPUS_OK && opusDecoder == null)
-            throw new IllegalStateException("Received error code from opus_decoder_create(...): " + error.get());
+        opusDecoder = Opus.INSTANCE.opus_decoder_create(
+                OpusPacket.OPUS_SAMPLE_RATE, OpusPacket.OPUS_CHANNEL_COUNT, error);
+        if (error.get() != Opus.OPUS_OK && opusDecoder == null) {
+            throw new IllegalStateException(
+                    "Received error code from opus_decoder_create(...): " + error.get());
+        }
     }
 
-    public boolean isInOrder(char newSeq)
-    {
+    public boolean isInOrder(char newSeq) {
         return lastSeq == (char) -1 || newSeq > lastSeq || lastSeq - newSeq > 10;
     }
 
-    public boolean wasPacketLost(char newSeq)
-    {
+    public boolean wasPacketLost(char newSeq) {
         return newSeq > lastSeq + 1;
     }
 
-    public short[] decodeFromOpus(AudioPacket decryptedPacket)
-    {
+    public short[] decodeFromOpus(AudioPacket decryptedPacket) {
         int result;
         ShortBuffer decoded = ShortBuffer.allocate(4096);
-        if (decryptedPacket == null)    //Flag for packet-loss
+        if (decryptedPacket == null) // Flag for packet-loss
         {
-            result = Opus.INSTANCE.opus_decode(opusDecoder, null, 0, decoded, OpusPacket.OPUS_FRAME_SIZE, 0);
+            result = Opus.INSTANCE.opus_decode(
+                    opusDecoder, null, 0, decoded, OpusPacket.OPUS_FRAME_SIZE, 0);
             lastSeq = (char) -1;
             lastTimestamp = -1;
-        }
-        else
-        {
+        } else {
             this.lastSeq = decryptedPacket.getSequence();
             this.lastTimestamp = decryptedPacket.getTimestamp();
 
@@ -77,12 +74,13 @@ public class Decoder
             byte[] buf = new byte[length];
             byte[] data = encodedAudio.array();
             System.arraycopy(data, offset, buf, 0, length);
-            result = Opus.INSTANCE.opus_decode(opusDecoder, buf, buf.length, decoded, OpusPacket.OPUS_FRAME_SIZE, 0);
+            result = Opus.INSTANCE.opus_decode(
+                    opusDecoder, buf, buf.length, decoded, OpusPacket.OPUS_FRAME_SIZE, 0);
         }
 
-        //If we get a result that is less than 0, then there was an error. Return null as a signifier.
-        if (result < 0)
-        {
+        // If we get a result that is less than 0, then there was an error. Return null as a
+        // signifier.
+        if (result < 0) {
             handleDecodeError(result);
             return null;
         }
@@ -92,30 +90,28 @@ public class Decoder
         return audio;
     }
 
-    private void handleDecodeError(int result)
-    {
+    private void handleDecodeError(int result) {
         StringBuilder b = new StringBuilder("Decoder failed to decode audio from user with code ");
-        switch (result)
-        {
-            case Opus.OPUS_BAD_ARG: //-1
+        switch (result) {
+            case Opus.OPUS_BAD_ARG: // -1
                 b.append("OPUS_BAD_ARG");
                 break;
-            case Opus.OPUS_BUFFER_TOO_SMALL: //-2
+            case Opus.OPUS_BUFFER_TOO_SMALL: // -2
                 b.append("OPUS_BUFFER_TOO_SMALL");
                 break;
-            case Opus.OPUS_INTERNAL_ERROR: //-3
+            case Opus.OPUS_INTERNAL_ERROR: // -3
                 b.append("OPUS_INTERNAL_ERROR");
                 break;
-            case Opus.OPUS_INVALID_PACKET: //-4
+            case Opus.OPUS_INVALID_PACKET: // -4
                 b.append("OPUS_INVALID_PACKET");
                 break;
-            case Opus.OPUS_UNIMPLEMENTED: //-5
+            case Opus.OPUS_UNIMPLEMENTED: // -5
                 b.append("OPUS_UNIMPLEMENTED");
                 break;
-            case Opus.OPUS_INVALID_STATE: //-6
+            case Opus.OPUS_INVALID_STATE: // -6
                 b.append("OPUS_INVALID_STATE");
                 break;
-            case Opus.OPUS_ALLOC_FAIL: //-7
+            case Opus.OPUS_ALLOC_FAIL: // -7
                 b.append("OPUS_ALLOC_FAIL");
                 break;
             default:
@@ -124,19 +120,17 @@ public class Decoder
         AudioConnection.LOG.debug("{}", b);
     }
 
-    protected synchronized void close()
-    {
-        if (opusDecoder != null)
-        {
+    protected synchronized void close() {
+        if (opusDecoder != null) {
             Opus.INSTANCE.opus_decoder_destroy(opusDecoder);
             opusDecoder = null;
         }
     }
 
     @Override
-    @SuppressWarnings("deprecation") /* If this was in JDK9 we would be using java.lang.ref.Cleaner instead! */
-    protected void finalize() throws Throwable
-    {
+    @SuppressWarnings(
+            "deprecation") /* If this was in JDK9 we would be using java.lang.ref.Cleaner instead! */
+    protected void finalize() throws Throwable {
         super.finalize();
         close();
     }
